--- a/Project_3 - Website Resume/index.html
+++ b/Project_3 - Website Resume/index.html
@@ -7,16 +7,92 @@
     <!--unicons-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <!--swiper css-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <!--css-->
     <link rel="stylesheet" href="assets/css/styls.css">
-    <title>Document</title>
+    <title>Personal Website</title>
 </head>
 <body>
     <!--header-->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav_logo">Depanker</a>
+
+     
+            <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list grid">
+                    <li class="nav_item">
+                        <a href="#home" class="nav_link">
+                            <i class="uil uil-estate nav_icon"></i> Home
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#about" class="nav_link">
+                            <i class="uil uil-user nav_icon"></i> About
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#skills" class="nav_link">
+                            <i class="uil uil-file-info-alt nav_icon"></i> Skills 
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#services" class="nav_link">
+                            <i class="uil uil-briefcase-alt nav_icon"></i> Services
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#portfolio" class="nav_link">
+                            <i class="uil uil-scenery nav_icon"></i> Portfolio
+                        </a>
+                    </li>
+                    <li class="nav_item">
+                        <a href="#contact" class="nav_link">
+                            <i class="uil uil-message nav_icon"></i> Contact me
+                        </a>
+                    </li>
+                </ul>
+                <i class="uil uil-times nav_close" id="nav-close"></i>
+            </div>
+
+            <div class="nav_btns">
+                <div class="nav_toggle" id="nav-toggle">
+                    <i class="uil uil-apps"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <!--main-->
     <main class ="main">
+        <!--home -->
+        <section class="home section" id="home">
+            <div class="home_container container grid">
+                <div class="home_content grid">
+                    <div class="home_social">
+                        <a href="www.linkedin.com/in/depanker-shrestha" target="_blank" class="home social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a href="https://github.com/Tenzing149/DepankerShrestha_Projects.git" target="_blank" class="home social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+                    </div>
+
+                    <div class="home_img">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--About-->
+
+        <!-- Skills-->
+
+        <!-- Qualification -->
+
+        <!--Services-->
+
 
     </main>
     <!--Footer-->
